--- a/index.html
+++ b/index.html
@@ -5,10 +5,34 @@
     <title>Replace</title>
     <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-    <h1>My First Web Page</h1>
-    <p>This is my first web page.</p>
+    <style>
+        #source-text {
+            width: 100%;
+            height: 300px;
+        }
+        #output-text {
+            width: 100%;
+            height: 300px;
+        }
+    </style>
+    <h2>Replace model class to class struce C#</h2>
+    <textarea id="source-text"></textarea>
+    <textarea id="output-text"></textarea>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const sourceText = document.getElementById('source-text');
+            const outputText = document.getElementById('output-text');
+            sourceText.addEventListener('input', function () {
+                let source = sourceText.value;
+                source = source.replace(/private/g, 'public');
+                source = source.replace(/string/g, 'string?');
+                source = source.replace(/ _/g, ' ');
+                source = source.replace(/;/g, ' { get; set; }');
+                outputText.value = output;
+            });
+        });
+    </script>
 </body>
 
 </html>
