--- a/index.html
+++ b/index.html
@@ -1,37 +1,48 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Replace</title>
     <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
     <style>
-        #source-text {
-            width: 100%;
-            height: 300px;
-        }
-        #output-text {
-            width: 100%;
-            height: 300px;
+        .input-text {
+            width: 50%;
+            height: 600px;
+            box-sizing: border-box;
+            float: left;
         }
     </style>
     <h2>Replace model class to class struce C#</h2>
-    <textarea placeholder="" title="source" id="source-text"></textarea>
-    <textarea placeholder="" title="output" id="output-text"></textarea>
+    <textarea placeholder="" title="source" id="source-text" class="input-text"></textarea>
+    <textarea placeholder="" title="output" id="output-text" class="input-text"></textarea>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const sourceText = document.getElementById('source-text');
             const outputText = document.getElementById('output-text');
             sourceText.addEventListener('input', function () {
                 let source = sourceText.value;
-                source = source.replace(/private/g, 'public');
-                source = source.replace(/string/g, 'string?');
-                source = source.replace(/ _/g, ' ');
-                source = source.replace(/;/g, ' { get; set; }');
+                source = source.replace(/private/gi, 'public');
+                source = source.replace(/string/gi, 'string?');
+                source = source.replace(/ _/gi, ' ');
+                source = source.replace(/;/gi, ' { get; set; }');
                 outputText.value = source;
             });
+
+            const textareas = document.querySelectorAll("textarea");
+  
+            for (let i = 0; i < textareas.length; i++) {
+                textareas[i].addEventListener("scroll", function() {
+                for (let j = 0; j < textareas.length; j++) {
+                    textareas[j].scrollTop = this.scrollTop;
+                    textareas[j].scrollLeft = this.scrollLeft;
+                }
+                });
+            }
         });
     </script>
 </body>
