update more style

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
             resize: none;
         }
     </style>
-    <h2>Replace model class to class struce C#</h2>
-    <textarea placeholder="" title="source" id="source-text" class="input-text"></textarea>
-    <textarea placeholder="" title="output" id="output-text" class="input-text"></textarea>
+    <h2 class="title-header">Replace model class to class struce C#</h2>
+    <div class="container">
+        <textarea placeholder="" title="source" id="source-text" class="input-text"></textarea>
+        <textarea placeholder="" title="output" id="output-text" class="input-text"></textarea>
+    </div>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const sourceText = document.getElementById('source-text');
