disable spell check

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <h2 class="title-header">Replace private class to public class model</h2>
     <div class="desc-header">
         Replace&nbsp;&nbsp;<div class="code-box">private string _name;</div>&nbsp;&nbsp;to&nbsp;&nbsp;<div
-            class="code-box">public string? Name { get; set; }</div>
+            class="code-box">public string? name { get; set; }</div>
     </div>
     <div class="container">
-        <textarea placeholder="" title="source" id="source-text" class="input-text"></textarea>
-        <textarea placeholder="" title="output" id="output-text" class="input-text"></textarea>
+        <textarea placeholder="" title="source" id="source-text" class="input-text" spellcheck="false"></textarea>
+        <textarea placeholder="" title="output" id="output-text" class="input-text" spellcheck="false"></textarea>
     </div>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
