--- a/index.html
+++ b/index.html
@@ -1,72 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Earth Box - Home</title>
-    <link rel="stylesheet" href="style.css" />
-    <style>
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-            transition: 0.3s;
-            width: 30%;
-            margin: 20px;
-            display: inline-block;
-            text-align: center;
-        }
-
-        .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-        }
-
-        .card img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Earth's Toolbox</title>
 </head>
 
 <body>
-    <main>
-        <h1 class="title-header">Earth Box</h1>
-
-        <h2 class="title-header">Featured Tools</h2>
-        <div class="container">
-            <div class="card">
-                <a href="property_converter.html">
-                    <img src="https://via.placeholder.com/200x200?text=Property+Converter" alt="Property Converter">
-                    <h3>Property Converter</h3>
-                    <p>Convert private class members to public properties in C# code.</p>
-                </a>
-            </div>
-            <div class="card">
-                <a href="formatjson.html">
-                    <img src="https://via.placeholder.com/200x200?text=JSON+Format+and+Minify" alt="Property Converter">
-                    <h3>JSON Format & Minify</h3>
-                    <p>Format JSON and Minify</p>
-                </a>
-            </div>
-            <!-- Add more tool cards here -->
-        </div>
-    </main>
-
-    <footer>
-        <p>&copy; 2023 Earth Box. All rights reserved.</p>
-    </footer>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-
-        });
-    </script>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
